--- a/service/package.json
+++ b/service/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "serverless-plugin-log-retention": "^2.0.0"
   }
 }
